<resources>
    <string name="app_name">CatCode</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="email">Email</string>
    <string name="email_adress">Email adress</string>
    <string name="not_yet_registered_signup">Not yet registered? Signup</string>
    <string name="passwordinp">Password</string>
    <string name="sign">Sign Up</string>
</resources>