<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="330dp"
            android:padding="20dp">


            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_email"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_password"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:id="@+id/signup_confirm"
                android:background="@drawable/lavender_border"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:textSize="20sp"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"/>

            <Button
                android:layout_width="350dp"
                android:layout_height="70dp"
                android:text="@string/sign_up"
                android:background="@color/lavender"
                android:id="@+id/signup_button"
                android:textSize="23sp"
                android:gravity="center_vertical"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_marginTop="15dp"
                app:cornerRadius = "30dp"
                tools:ignore="RtlCompat" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginRedirectText"
                android:text="@string/already_an_user_login"
                android:layout_gravity="center"
                android:padding="8dp"
                android:textSize="18sp"
                android:layout_marginTop="2dp"
                android:textColor="@color/lavender"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>